common/dex/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /dex/
      route:
        - destination:
            host: DEX_SERVICE.DEX_NAMESPACE.svc.cluster.local
            port:
              number: 5556
